- Fixed keyboard focus not brought back to main pane after showing "Select Notes" dialog
- Fixed clicking on track header of drum editor unselects notes
- Fixed measures appearing unselected when right-clicking on them
- Fixed printing bug where notes appeared in the wrong measure
- Fixed wrong time sig change being selected after adding a time sig effect
- More code cleanup

1.2.2
- Support for custom keys (e.g. for street organs)
    - Added ability to save user-defined key presets
    - Support for disabling notes (e.g. if your instrument cannot play all notes)
- Fixed octave numbers in keyboard editor and guitar editor
- More flexible printing dialog; allows changing the printing notation type for each track
- Menu icons on Linux/Windows (thanks to Alexis Archambault for coding this!)
- Keyroll printing
- Fixed bug that caused wrong sequence to be closed when pressing "X" on an unselected tab
- Improved sequence is selected after closing a sequence
- Loading MIDI files is now fast again
- Fixed hanging if a warning message is hsown when opening a file
- Much code cleanup, documentation and refactoring

1.2.1
- Fixed printing of accidentals

1.2
- Printing
    - Improved printing dialog
    - Give access to page setup dialog
    - Show progress dialog while calculating print layout
    - Print song tempo
    - Improved layout code, which result in vast improvements when printing tablatures without scores
    - In printing code, removed absolute constants and repalced them to be relative to page size
    - Fixed bugs that caused pages > 1 to have less contents than first page
    - Silences are now also printed in tablature mode; makes them easier to follow
    - Print track name(s)
    - Many other readability improvements to tablature printing
    - Better printing of time signature changes
    - Connect grand staffs toghether (extend measure bars)
    - Collapse long series of empty measures into a gathered rest